feat(botão github/sobre mim e habilidades), perf(cabeçalho)
[feat] adicionado um botão no cabeçalho que leva para a página do github do autor
[feat] adicionado duas divs novas, uma trata-se de uma sessão com um texto explicativo sobre o autor e a outra referente ao nível de suas habilidades em certos programas

[perf] o cabeçalho foi alterado para que seja mais responsivo e melhor visualmente

--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
     <style>
         @import url(/styles/css.css);
     </style>
-
 </head>
 
 <body bgcolor="#181818">
 
-
     <header>
-
         <section id="info_caixas">
-
             <center>
-
                 <div class="informacoes">
-                    <img src="images/foto_perfil.jpg" alt="Ricardo Campos" style="border-radius: 100%; width: 48%;">
-
+                    <img src="images/foto_perfil.jpg" alt="Ricardo Campos" style="border-radius: 100%; width: 11vw; -webkit-filter: drop-shadow(5px 3px 1px rgba(0,0,0,.5));
+                    filter: drop-shadow(5px 3px 1px rgba(0,0,0,.5));">
                     <br>
 
                     <abbr title="Primeiro Lugar como o melhor aluno da turma do 2º de Jogos Digitais de 2022">
@@ -44,39 +39,201 @@
                 </div>
 
                 <div class="informacoes">
-
                     <div id="orientacao">
+                        <br><br>
 
-                    <br><br>
-
-                    <h6 id="nome">Ricardo Palma Garcia de Campos</h6>
-
-                    <br>
+                        <h6 id="nome">Ricardo Palma Garcia de Campos</h6>
+                        <br>
 
                         <a href="mailto:ricardopalmacampos@gmail.com?subject=Assunto">
-                            <img class="icones" src="/images/email_logo.png">
+                            <img class="icones" src="images/email_logo.png">
                         </a>
 
                         <a href="https://www.linkedin.com/in/ricardo-palma-garcia-de-campos-07b0642b2/">
-                            <img class="icones" src="/images/linkedin_logo.png">
+                            <img class="icones" src="images/linkedin_logo.png">
                         </a>
 
                         <a href="https://www.instagram.com/rpgcampos/">
-                            <img class="icones" src="/images/instagram_logo.png">
+                            <img class="icones" src="images/instagram_logo.png">
+                        </a>
+
+                        <a href="https://github.com/littlerichard01">
+                            <img class="icones" src="images/github_logo.png">
                         </a>
 
                     </div>
-
                 </div>
-
             </center>
         </section>
-
     </header>
 
-
     <main>
+        <center>
+            <section id="caixa_sobre">
+                <div id="sobre_mim">
+                    <h6 id="titulos">Sobre mim</h6>
+                    <p class="textos">
+                        Me chamo Ricardo, tenho 18 anos e sou técnico em
 
+                        <a href="https://www.cps.sp.gov.br/cursos-etec/programacao-de-jogos-digitais/">
+                            <strong class="links">Programação de Jogos Digitais</strong>.
+                        </a>
+
+                        Durante minha formação fui representante de classe durante dois anos e meio, e fui classificado
+                        como
+                        melhor aluno da turma por dois anos seguidos. Ainda não possuo experiências no mercado de
+                        trabalho
+                        e, atualmente estou cursando
+
+                        <a href="https://www.cps.sp.gov.br/cursos-fatec/desenvolvimento-de-software-multiplataforma/">
+                            <strong class="links">Desenvolvimento de Software Multiplataforma</strong>
+                        </a> na
+
+                        <a href="https://www.fateczl.edu.br/inicio">
+                            <strong class="links">FATEC ZL</strong>,
+                        </a> procurando vagas de estágio na área.
+                    </p>
+
+                </div>
+            </section>
+
+                <section id="caixa_habilidades">
+                <div id="habilidades">
+                    <h6 id="titulos">Habilidades</h6>
+
+                    <abbr title="Conhecimento avançado em HTML5">
+                        <div class="habilidade">
+                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_html.png" alt="Logo HTML5">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em CSS">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_css.png" alt="Logo CSS">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Pouco conhecimento em JavaScript">
+                        <div class="habilidade">
+                            <strong class="likert_t">..</strong><strong class="likert_f">...</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_js.png" alt="Logo JavaScript">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em C#">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_csharp.png" alt="Logo C#">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em C++">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_c.png" alt="Logo C++">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em Java">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_java.png" alt="Logo Java">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento avançado em Word">
+                        <div class="habilidade">
+                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_word.png" alt="Logo Word"
+                                style="border-radius: 0%" ;>
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em Excel">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_excel.png" alt="Logo Excel"
+                                style="border-radius: 0%;">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento avançado em PowerPoint">
+                        <div class="habilidade">
+                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_powerpoint.png"
+                                alt="Logo PowerPoint">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em Access">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_access.png" alt="Logo Access">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento avançado em GameMaker Studio">
+                        <div class="habilidade">
+                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_gamemaker.png"
+                                alt="Logo GameMaker Studio">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento básico em Unity">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_unity.png" alt="Logo Unity">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento avançado em Blender">
+                        <div class="habilidade">
+                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_blender.png" alt="Logo Blender">
+                        </div>
+                    </abbr>
+
+                    <abbr title="Conhecimento avançado no MIT App Inventor">
+                        <div class="habilidade">
+                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
+                            <br>
+
+                            <img class="logo_habilidade" src="images/habilidades/logo_appinventor.png"
+                                alt="Logo MIT App Inventor">
+                        </div>
+
+                </div>
+            </section>
+        </center>
     </main>
 
 
