fix(importação css) refactor(elementos likert/margens e padding de caixas)
[fix] removido uma barra que estava impedindo a importação de css em algumas máquinas
[refactor] mudança nos elementos likert das habilidades, trocados os pontos por estrelas e posição abaixo das logos
[refactor] mudado alguns valores no css que alteram margens e paddings das caixas do main

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portifólio</title>
 
     <style>
-        @import url(/styles/css.css);
+        @import url(styles/css.css);
     </style>
 </head>
 
@@ -40,7 +40,6 @@
 
                 <div class="informacoes">
                     <div id="orientacao">
-                        <br><br>
 
                         <h6 id="nome">Ricardo Palma Garcia de Campos</h6>
                         <br>
@@ -71,7 +70,7 @@
         <center>
             <section id="caixa_sobre">
                 <div id="sobre_mim">
-                    <h6 id="titulos">Sobre mim</h6>
+                    <h6 class="titulos">Sobre mim</h6>
                     <p class="textos">
                         Me chamo Ricardo, tenho 18 anos e sou técnico em
 
@@ -97,139 +96,146 @@
                 </div>
             </section>
 
-                <section id="caixa_habilidades">
+            <section id="caixa_habilidades">
                 <div id="habilidades">
-                    <h6 id="titulos">Habilidades</h6>
+                    <h6 class="titulos">Habilidades</h6>
 
-                    <abbr title="Conhecimento avançado em HTML5">
+                    <abbr title="Conhecimento intermediário em HTML5">
                         <div class="habilidade">
-                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_html.png" alt="Logo HTML5">
+                            <strong class="likert_t">★★★★</strong><strong class="likert_f">★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Conhecimento básico em CSS">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_css.png" alt="Logo CSS">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Pouco conhecimento em JavaScript">
                         <div class="habilidade">
-                            <strong class="likert_t">..</strong><strong class="likert_f">...</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_js.png" alt="Logo JavaScript">
+                            <strong class="likert_t">★★</strong><strong class="likert_f">★★★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Conhecimento básico em C#">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_csharp.png" alt="Logo C#">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
-                    <abbr title="Conhecimento básico em C++">
+                    <abbr title="Pouco conhecimento em C++">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_c.png" alt="Logo C++">
+                            <strong class="likert_t">★★</strong><strong class="likert_f">★★★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Conhecimento básico em Java">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_java.png" alt="Logo Java">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
-                    <abbr title="Conhecimento avançado em Word">
+                    <abbr title="Conhecimento intermediário em Word">
                         <div class="habilidade">
-                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_word.png" alt="Logo Word"
                                 style="border-radius: 0%" ;>
+                            <strong class="likert_t">★★★★</strong><strong class="likert_f">★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Conhecimento básico em Excel">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_excel.png" alt="Logo Excel"
                                 style="border-radius: 0%;">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
-                    <abbr title="Conhecimento avançado em PowerPoint">
+                    <abbr title="Conhecimento intermediário em PowerPoint">
                         <div class="habilidade">
-                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_powerpoint.png"
-                                alt="Logo PowerPoint">
+                                alt="Logo PowerPoint" style="border-radius: 0%;">
+                            <strong class="likert_t">★★★★</strong><strong class="likert_f">★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Conhecimento básico em Access">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_access.png" alt="Logo Access">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
-                    <abbr title="Conhecimento avançado em GameMaker Studio">
+                    <abbr title="Conhecimento intermediário em GameMaker Studio">
                         <div class="habilidade">
-                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_gamemaker.png"
                                 alt="Logo GameMaker Studio">
+                            <strong class="likert_t">★★★★</strong><strong class="likert_f">★</strong>
+
                         </div>
                     </abbr>
 
                     <abbr title="Conhecimento básico em Unity">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_unity.png" alt="Logo Unity">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
-                    <abbr title="Conhecimento avançado em Blender">
+                    <abbr title="Conhecimento intermediário em Blender">
                         <div class="habilidade">
-                            <strong class="likert_t">...</strong><strong class="likert_f">..</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_blender.png" alt="Logo Blender">
+                            <strong class="likert_t">★★★</strong><strong class="likert_f">★★</strong>
+
                         </div>
                     </abbr>
 
-                    <abbr title="Conhecimento avançado no MIT App Inventor">
+                    <abbr title="Conhecimento intermediário no MIT App Inventor">
                         <div class="habilidade">
-                            <strong class="likert_t">....</strong><strong class="likert_f">.</strong>
-                            <br>
 
                             <img class="logo_habilidade" src="images/habilidades/logo_appinventor.png"
                                 alt="Logo MIT App Inventor">
+                            <strong class="likert_t">★★★★</strong><strong class="likert_f">★</strong>
+
                         </div>
+
+                </div>
+            </section>
+
+            <section id="caixa_projetos">
+                <div id="projetos">
+                    <h6 class="titulos">Projetos</h6>
 
                 </div>
             </section>
