--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <center>
             <section id="caixa_sobre">
                 <div id="sobre_mim">
-                    <h6 class="titulos">Sobre mim</h6>
+                    <h1 class="titulos">Sobre mim</h1>
                     <p class="textos">
                         Me chamo Ricardo, tenho 18 anos e sou técnico em
 
@@ -98,7 +98,7 @@
 
             <section id="caixa_habilidades">
                 <div id="habilidades">
-                    <h6 class="titulos">Habilidades</h6>
+                    <h1 class="titulos">Habilidades</h1>
 
                     <abbr title="Conhecimento intermediário em HTML5">
                         <div class="habilidade">
@@ -235,7 +235,30 @@
 
             <section id="caixa_projetos">
                 <div id="projetos">
-                    <h6 class="titulos">Projetos</h6>
+                    <h1 class="titulos">Projetos</h1>
+
+                    <div id="randomess">
+                        <p class="textos">
+                            Desenvolvida inicialmente como um projeto de marketing, a 
+                            <span>RandoMess</span> 
+                            é uma
+                            <strong>marca registrada</strong> de jogos.
+                            <br><br>
+
+                            Cada ícone representa um jogo principal dos membros iniciais da 
+                            <span>RandoMess</span>, o meu ícone sendo
+                            o foguete laranja, que representa o segundo jogo desevolvido pela 
+                            <span>RandoMess</span>:
+
+                            <h1 id="destaque">Bylunnar e o ressurgimento de Tryoria.</h1>
+
+                        </p>
+                    </div>
+
+                    <div id="randomess_logo">
+                        <img src="images/projetos/logo_randomess.png" alt="Logo RandoMess"
+                            style="border-radius: 10%; width: 100%;">
+                    </div>
 
                 </div>
             </section>
